# LearnOpenGLExercises

./: CMakeLists.txt  main.cpp
Aula 01/: main.cpp
Aula 01 Ex 01/: main.cpp
Aula 01 Ex 02/: CMakeLists.txt  main.cpp
Aula 01 Ex 03/: main.cpp
Aula 01/Ex 02/: CMakeLists.txt
Aula 01/Materia/: main.cpp
Aula 02/Ex 01/: CMakeLists.txt  main.cpp
Aula 02/Ex 02/: main.cpp
Aula 02/Ex 03/: main.cpp
Aula 02/Materia/: CMakeLists.txt  main.cpp  mainExternalShaders.cpp  mainVertexDiffColors.cpp
Aula 02/Materia/Shaders/: shader.vert  shaderMultipleColor.frag
